osm2pgsql: Document that the autoconf tools need a few more packages to be installed: autoconf automake libtool

--- a/README
+++ b/README
@@ -66,7 +66,7 @@ e.g. on Fedora:
 # yum install geos-devel proj-devel postgresql-devel libxml2-devel bzip2-devel gcc-c++
 
 on Debian:
-# aptitude install libxml2-dev libgeos-dev libpq-dev libbz2-dev proj autoconf make g++
+# aptitude install libxml2-dev libgeos-dev libpq-dev libbz2-dev proj autoconf automake libtool make g++
 
 On most Unix-like systems the program can be compiled by
 running './autogen.sh && ./configure && make'.
