--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+osm2pgsql (0.80.0) lucid; urgency=low
+
+  * version 0.80 does not use intarray any longer.
+
+ -- Frederik Ramm <frederik@remote.org>  Wed, 03 Aug 2011 15:03:42 +0200
+
 osm2pgsql (0.70.5-karmic1) karmic; urgency=low
 
   * 0.70.5 build
