--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+osm2pgsql (0.80.0-3) natty; urgency=low
+
+  * Fix debian package scripts.
+
+ -- Kai Krueger <kakrueger@gmail.com>  Tue, 20 Sep 2011 10:00:00 +0000
+
 osm2pgsql (0.80.0) lucid; urgency=low
 
   * version 0.80 does not use intarray any longer.
@@ -8,13 +14,13 @@ osm2pgsql (0.70.5-karmic1) karmic; urgency=low
 
   * 0.70.5 build
 
- -- Frederik Ramm <frederik@remote.org> Sat, 29 Jan 2011 12:11:42 +0000
+ -- Frederik Ramm <frederik@remote.org>  Sat, 29 Jan 2011 12:11:42 +0000
 
 osm2pgsql (0.69) jaunty; urgency=low
 
   * v0.69
 
- -- Frederik Ramm <fred@lambert>  Wed, 04 Nov 2009 09:51:59 +0100
+ -- Frederik Ramm <frederik@remote.org>  Wed, 04 Nov 2009 09:51:59 +0100
 
 osm2pgsql (0.65) unstable; urgency=low
 
