Typos, punctuation consistency, etc. on manpages.

--- a/docs/nodecachefilereader.1
+++ b/docs/nodecachefilereader.1
@@ -18,7 +18,7 @@ This manual page documents briefly the
 command.
 .PP
 .B nodecachefilereader
-allows you to inspect and test osm2pgsql's custome node database.
+allows you to inspect and test osm2pgsql's custom node database.
 .PP
 .SH OPTIONS
 If only the filename of the node cache is given, nodecachefilereader
