Added link to explanation of web mercator and removed typo in shell command

--- a/README
+++ b/README
@@ -124,9 +124,9 @@ $ sudo -u postgres psql -d <dbname> -c "ALTER TABLE geometry_columns OWNER TO <u
 $ sudo -u postgres psql -d <dbname> -c "ALTER TABLE spatial_ref_sys  OWNER TO <username>"
 
 The 900913 is not normally included with PostGIS. To add it you
-should run:
+should execute [900913.sql](http://wiki.openstreetmap.org/wiki/EPSG:3857) which comes with osm2pgsql:
 
-$ sudo psql -u postgres psql -d <dbname> -f 900913.sql
+$ sudo -u postgres psql -d <dbname> -f /path/to/900913.sql
 
 If you want to use hstore support then you will also need to enable the PostgreSQL
 hstore-new extension.
