Fix spelling-error-in-manpage by using 'allows one to'.
Author: Bas Couwenberg <sebastic@xs4all.nl> via Debian patch.

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -58,7 +58,7 @@ to (default: gis).
 .TP
 \fB\-i\fR|\-\-tablespace\-index tablespacename
 Store all indices in a separate PostgreSQL tablespace named by this parameter.
-This allows to e.g. store the indices on faster storage like SSDs.
+This allows one to e.g. store the indices on faster storage like SSDs.
 .TP
 \fB\ \fR\-\-tablespace\-main\-data tablespacename
 Store the data tables (non slim) in the given tablespace.
