--- a/README
+++ b/README
@@ -317,17 +317,16 @@ executing:
 # make check
 
 Some of these tests depend on being able to set up a database and run
-osm2pgsql against it. To allow that to happen, you first need to set
-up a testing tablespace like this:
+osm2pgsql against it. You need to ensure that PostgreSQL is running
+and that your user is a superuser of that system. To do that, run:
+
+# sudo -u postgres createuser -s $USER
+
+And you then need to set up a testing tablespace like this:
 
 # sudo mkdir -p /tmp/psql-tablespace
 # sudo /bin/chown postgres.postgres /tmp/psql-tablespace
 # psql -c "CREATE TABLESPACE tablespacetest LOCATION '/tmp/psql-tablespace'" postgres
-
-And ensure that PostgreSQL is running and that your user is a
-superuser of that system. To do that, run:
-
-# sudo -u postgres createuser -s $USER
 
 Once this is all set up, all the tests should run (no SKIPs), and pass
 (no FAILs). If you encounter a failure, you can find more information
