Remove doc references to the primitive parser

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -93,7 +93,7 @@ Prefix for table names (default: planet_osm).
 .TP
 \fB\-r\fR|\-\-input\-reader format
 Select input format reader. Available choices are \fBlibxml2\fR 
-(default) and \fBprimitive\fR for OSM XML format files, \fBo5m\fR for o5m formatted file
+(default) for OSM XML format files, \fBo5m\fR for o5m formatted file
 and \fBpbf\fR for OSM PBF binary format (may not be available on all platforms).
 .TP
 \fB\-s\fR|\-\-slim
