--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -72,6 +72,9 @@ Store the slim mode tables in the given tablespace.
 \fB\ \fR\-\-tablespace\-slim\-index tablespacename
 Store the indices of the slim mode tables in the given tablespace.
 .TP
+\fB\-X\fR|\-\-schema
+Use the specified schema to store the tables
+.TP
 \fB\-l\fR|\-\-latlong
 Store data in degrees of latitude & longitude.
 .TP
