--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -78,9 +78,6 @@ Store data in degrees of latitude & longitude.
 \fB\-m\fR|\-\-merc
 Store data in proper spherical Mercator (the default).
 .TP
-\fB\-M\fR|\-\-oldmerc
-Store data in the legacy OSM Mercator format.
-.TP
 \fB\-E\fR|\-\-proj num
 Use projection EPSG:num
 .TP
@@ -246,9 +243,9 @@ Verbose output.
 .SH SUPPORTED PROJECTIONS
 Latlong             (\-l) SRS:  4326 (none)
 .br
-WGS84 Mercator      (  ) SRS:  3395 +proj=merc +datum=WGS84  +k=1.0 +units=m +over +no_defs
-.br
 Spherical Mercator  (\-m) SRS:900913 +proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +no_defs +over
+.br
+EPSG-defined        (\-E) SRS: +init=epsg:(as given in parameter)
 .PP
 .SH SEE ALSO
 .BR proj (1),
