forward input-reader option to libosmium as format parameter
Also adapts documentation accordingly

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -81,16 +81,13 @@ Store data in proper spherical Mercator (the default).
 \fB\-E\fR|\-\-proj num
 Use projection EPSG:num
 .TP
-\fB\-u\fR|\-\-utf8\-sanitize
-Repair bad UTF\-8 input data (present in planet
-dumps prior to August 2007). Adds about 10% overhead.
-.TP
 \fB\-p\fR|\-\-prefix prefix_string
 Prefix for table names (default: planet_osm).
 .TP
 \fB\-r\fR|\-\-input\-reader format
-Select input format reader. Available choices are \fBlibxml2\fR 
-(default) for OSM XML format files, \fBo5m\fR for o5m formatted file
+Select format of the input file. Available choices are \fBauto\fR 
+(default) for autodetecting the format,
+\fBxml\fR for OSM XML format files, \fBo5m\fR for o5m formatted files
 and \fBpbf\fR for OSM PBF binary format (may not be available on all platforms).
 .TP
 \fB\-s\fR|\-\-slim
