PBF is no longer optional

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -88,7 +88,7 @@ Prefix for table names (default: planet_osm).
 Select format of the input file. Available choices are \fBauto\fR 
 (default) for autodetecting the format,
 \fBxml\fR for OSM XML format files, \fBo5m\fR for o5m formatted files
-and \fBpbf\fR for OSM PBF binary format (may not be available on all platforms).
+and \fBpbf\fR for OSM PBF binary format.
 .TP
 \fB\-s\fR|\-\-slim
 Store temporary data in the database. Without this mode, all temporary data is stored in
