Improve invalid polygons text

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -195,10 +195,11 @@ assumption that post-processed Coastline Checker shape files will be used.
 OpenStreetMap data is defined in terms of nodes, ways and relations and not in
 terms of actual geometric features. Osm2pgsql therefore tries to build postgis
 geometries out of this data representation. However not all ways and relations
-correspond to valid postgis geometries (e.g. self intersecting polygons). By
-default osm2pgsql tries to automatically fix these geometries using ST_Buffer(0)
-around the invalid polygons. With this option, invalid polygons are instead
-simply dropped from the database.
+correspond to valid PostGIS geometries (e.g. self intersecting polygons). By
+default osm2pgsql tries to fix these geometries using buffer(0) around the
+invalid polygons. With this option, invalid polygons are instead simply dropped
+from the database. Even without this option, all polygons in the database should
+be valid.
 .TP
 \fB\  \fR\-\-unlogged
 Use postgresql's unlogged tables for storing data. This requires PostgreSQL 9.1
