Manpage: fix abbreviation for --output

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -150,7 +150,7 @@ Create a tile expiry list.
 \fB\-o\fR|\-\-expire\-output /path/to/expire.list
 Output file name for expired tiles list.
 .TP
-\fB\-o\fR|\-\-output
+\fB\-O\fR|\-\-output
 Specifies the output back\-end or database schema to use. Currently
 osm2pgsql supports \fBpgsql\fR, \fBgazetteer\fR and \fBnull\fR. \fBpgsql\fR is
 the default output back\-end / schema and is optimized for rendering with Mapnik.
