--- a/docs/node-persistent-cache-reader.1
+++ b/docs/node-persistent-cache-reader.1
@@ -1,37 +1,37 @@
-.TH NODECACHEFILEREADER 1 "April 06, 2013"
+.TH NODECACHEFILEREADER 1 "February 27, 2016"
 .\" Please adjust this date whenever revising the manpage.
 .SH NAME
-nodecachefilereader \- utility to inspect osm2pgsql's node cache.
+node-persistent-cache-reader \- utility to inspect osm2pgsql's node cache.
 .SH SYNOPSIS
-.B nodecachefilereader
+.B node-persistent-cache-reader
 .RI /path/to/node.cache
 .br
-.B nodecachefilereader
+.B node-persistent-cache-reader
 .RI /path/to/node.cache\ node_id1\ node_id2\ node_id3
 .br
-.B nodecachefilereader
+.B node-persistent-cache-reader
 .RI /path/to/node.cache\ node_id1,node_id2,node_id3
 .br
 .SH DESCRIPTION
 This manual page documents briefly the
-.B nodecachefilereader
+.B node-persistent-cache-reader
 command.
 .PP
-.B nodecachefilereader
+.B node-persistent-cache-reader
 allows you to inspect and test osm2pgsql's custom node database.
 .PP
 .SH OPTIONS
-If only the filename of the node cache is given, nodecachefilereader
+If only the filename of the node cache is given, node-persistent-cache-reader
 performs some basic diagnostics on the node cache, as well as give
 some basic benchmark results on how quickly it can lookup nodes by id
 .PP
-If one or more node_ids are given, nodecachefilereader retrieves the
+If one or more node_ids are given, node-persistent-cache-reader retrieves the
 information stored (latitude / longitude) about those nodes in the database
 .PP
 .SH SEE ALSO
 .BR osm2pgsql (1),
 .br
 .SH AUTHOR
-nodecachefilereader was written by Kai Krueger and other
+node-persistent-cache-reader was written by Kai Krueger and other
 OpenStreetMap project members.
 .PP
