--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -83,6 +83,7 @@ Use projection EPSG:num
 .TP
 \fB\-p\fR|\-\-prefix prefix_string
 Prefix for table names (default: planet_osm).
+The prefix may also contain a schema like in "geodata.osm".
 .TP
 \fB\-r\fR|\-\-input\-reader format
 Select format of the input file. Available choices are \fBauto\fR
