Update docs about database option

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -1,4 +1,4 @@
-.TH OSM2PGSQL 1 "October 31, 2016"
+.TH OSM2PGSQL 1 "February 5, 2017"
 .\" Please adjust this date whenever revising the manpage.
 .SH NAME
 osm2pgsql \- Openstreetmap data to PostgreSQL converter.
@@ -53,8 +53,7 @@ Remove existing data from the database. This is the
 default if \fB\-\-append\fR is not specified.
 .TP
 \fB\-d\fR|\-\-database name
-The name of the PostgreSQL database to connect
-to (default: gis).
+The name of the PostgreSQL database to connect to.
 .TP
 \fB\-i\fR|\-\-tablespace\-index tablespacename
 Store all indices in a separate PostgreSQL tablespace named by this parameter.
