Use HTTPS for planet links in man page

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -22,12 +22,12 @@ imports data from OSM file(s) into a PostgreSQL database
 suitable for use by the Mapnik renderer or the Nominatim geocoder.
 .br
 OSM planet snapshots can be downloaded from
-http://planet.openstreetmap.org/. Partial planet files
+https://planet.openstreetmap.org/. Partial planet files
 ("extracts") for various countries are available, see
-http://wiki.openstreetmap.org/wiki/Planet.osm.
+https://wiki.openstreetmap.org/wiki/Planet.osm.
 .PP
 Extracts in PBF (ProtoBufBinary) format are also available from
-http://download.geofabrik.de/osm/.
+https://download.geofabrik.de/osm/.
 .PP
 When operating in "slim" mode (and on a database created in "slim" mode!),
 .B osm2pgsql
