--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -156,7 +156,8 @@ Specifies the output back\-end or database schema to use. Currently
 osm2pgsql supports \fBpgsql\fR, \fBgazetteer\fR and \fBnull\fR. \fBpgsql\fR is
 the default output back\-end / schema and is optimized for rendering with Mapnik.
 \fBgazetteer\fR is a db schema optimized for geocoding and is used by Nominatim.
-The \fBmulti\fR backend allows more customization of tables.
+The \fBmulti\fR backend allows more customization of tables. The experimental
+\fBflex\fR backend allows more flexible configuration.
 \fBnull\fR does not write any output and is only useful for testing or with
 \-\-slim for creating slim tables.
 .TP
